---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    body: [
        Class(
            Class {
                name: "T",
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [
                        Func {
                            name: "f",
                            params: Params {
                                has_self: true,
                                pos: [],
                                argv: None,
                                kw: [],
                                kwargs: None,
                            },
                            body: [
                                Print(
                                    Print {
                                        values: [
                                            GetSelf,
                                        ],
                                    },
                                ),
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: Some(
                    "U",
                ),
                members: ClassMembers {
                    fields: [],
                    methods: [
                        Func {
                            name: "f",
                            params: Params {
                                has_self: true,
                                pos: [],
                                argv: None,
                                kw: [],
                                kwargs: None,
                            },
                            body: [
                                Print(
                                    Print {
                                        values: [
                                            GetSelf,
                                            GetSuper,
                                        ],
                                    },
                                ),
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
        Class(
            Class {
                name: "T",
                parent: Some(
                    "U",
                ),
                members: ClassMembers {
                    fields: [],
                    methods: [
                        Func {
                            name: "init",
                            params: Params {
                                has_self: true,
                                pos: [],
                                argv: None,
                                kw: [],
                                kwargs: None,
                            },
                            body: [
                                Expr(
                                    SetField(
                                        SetField {
                                            target: GetField {
                                                target: GetSelf,
                                                name: "v",
                                            },
                                            value: Call(
                                                Call {
                                                    target: GetField(
                                                        GetField {
                                                            target: GetSuper,
                                                            name: "f",
                                                        },
                                                    ),
                                                    args: Args {
                                                        pos: [],
                                                        kw: [],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                ),
                            ],
                            has_yield: false,
                        },
                    ],
                    meta: [],
                },
            },
        ),
    ],
}
